Save background images in projects Enable shift-click-select for groups in no-bone formats Fix tooltip issue in preview menu

--- a/css/window.css
+++ b/css/window.css
@@ -70,7 +70,7 @@
 	.single_canvas_wrapper {
 		height: 100%;
 		width: 100%;
-		overflow: hidden;
+		/*overflow: hidden;*/
 		position: absolute;
 		cursor: inherit;
 	}
